public/styles/tweet.css
article.tweet-container {
  border: solid black 3px;
  border-radius: 5px;
  color: hsl(193, 13%, 41%);
  margin-bottom: 30px;
}

article.tweet-container:hover {
  box-shadow: 10px 10px 2px 1px rgb(42 42 60 / 20%);
}

article.tweet-container header {
  background: transparent;
  height: 90px;
  border-radius: 5px;
  
}

article.tweet-container header h1 {
  font-size: 1.5em;
  float: left;
  margin-left: 10px;
}
article.tweet-container header h2 {
  font-size: 1em;
  font-weight: 100;
  margin-right: 10px;
  float: right;
}

article.tweet-container header img {
  float: left;
  padding-top: 10px;
  height: 55px;
  width: auto;
  margin-left: 15px;
}

article.tweet-container .tweet-body {
  border-bottom: solid black 3px;
  text-align: left;
  margin-left: 15px;
  margin-right: 15px;
}

article.tweet-container footer {
  height: 50px;
  display: block;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 20px;
  margin-right: 20px;
}

article.tweet-container footer i {
  color: #4056A1;
  margin-right: 11px;
}

article.tweet-container footer i:hover {
  color: #b59b26;
}

article.tweet-container p {
  padding-bottom: 10px;
}

